fix: add button and placeholder

--- a/singolo3.html
+++ b/singolo3.html
@@ -14,10 +14,11 @@
             <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
             <div class="layout-2-column">
                 <form action method = 'POST'>
-                    <input type="text" name = 'name' placeholder="Name (Reqired)">
-                    <input type="email" name="email" placeholder="Email (Required)">
+                    <input type="text" name = 'name' placeholder="Name (Reqired)"  required>
+                    <input type="email" name="email" placeholder="Email (Required)"  required>
                     <input type="text" name="subject" placeholder="Subject">
-                    <textarea class="form__discribe" name="textarea">Describe your project in detail...</textarea>
+                    <textarea placeholder="Describe your project in detail.." class="form__discribe" name="textarea">Describe your project in detail...</textarea>
+                    <input class="button" type="submit" value="Submit">
                 </form>
                 <div class="info">
                     <h3>Contact Information</h3>
