fix: change markups

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="img img8"><img src="./assets/img8.png" width="220px" height="187px" alt="img8"></div>
             <div class="img img9"><img src="./assets/img9.png" width="220px" height="187px" alt="img9"></div>
             <div class="img img10"><img src="./assets/img10.png" width="220px" height="187px" alt="img10"></div>
-            <div class="img img11"><img src="./assets/img16.png" width="220px" height="187px" alt="img11"></div>
+            <div class="img img111"><img src="./assets/img16.png" width="220px" height="187px" alt="img11"></div>
             <div class="img img12"><img src="./assets/img12.png" width="220px" height="187px" alt="img12"></div>
         </div>
       </div>
@@ -177,6 +177,50 @@
       <div class="bottom-line"></div>
   </section>
   </div>
+  <section class="main3">
+    <div class="wrapper3">
+        <h2 class="get-quote__header">Get a Quote</h2>
+        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+        <div class="layout-2-column">
+            <form action method = 'POST'>
+                <input type="text" name = 'name' placeholder="Name (Reqired)"  required>
+                <input type="email" name="email" placeholder="Email (Required)"  required>
+                <input type="text" name="subject" placeholder="Subject">
+                <textarea placeholder="Describe your project in detail.." class="form__discribe" name="textarea">Describe your project in detail...</textarea>
+                <input class="button" type="submit" value="Submit">
+            </form>
+            <div class="info">
+                <h3>Contact Information</h3>
+                <p class="info__discribe">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. 
+                </p>
+                <p class="info__data">
+                    <span class="icon icon_map"><img src="./assets/location.svg" alt="location"></span>
+                    Elm St. 14/05 Lost City 
+                </p>
+                <p class="info__data">
+                    <span class="icon icon_phone"><img src="./assets/phone.svg" alt="phone"></span>
+                    <a href="tel:03528 331 86 35">03528 331 86 35</a>
+                </p>
+                <p class="info__data">
+                    <span class="icon icon_email"><img src="./assets/mail.svg" alt="nail"></span>
+                    <a href="mailto:info@singolo.com">info@singolo.com</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="bottom-line"></div>
+</section>
+<footer class="footer">
+    <div class="wrapper4">
+        <p class="copeRig">	&copy; Copyright 2013</p>
+        <div class="social">
+            <div><img src="./assets/facebook.svg" alt="facebook"></div>
+            <div><img src="./assets/google+.svg" alt="google"></div>
+            <div><img src="./assets/twitter.svg" alt="twiter"></div>
+            <div><img src="./assets/linkedin.svg" alt="linkedin"></div>
+        </div>
+    </div>
+</footer>
 </div>
 </body>
 </html>
