--- a/singolo3.html
+++ b/singolo3.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="main">
-        <div class="wrapper">
+    <section class="main3">
+        <div class="wrapper3">
             <h2 class="get-quote__header">Get a Quote</h2>
             <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
             <div class="layout-2-column">
